--- a/TT-2016-B045/archivosTex/protocoloDupless.tex
+++ b/TT-2016-B045/archivosTex/protocoloDupless.tex
@@ -87,41 +87,40 @@ DupLESS contempla que un ataque por fuerza bruta a un texto cifrado dentro de un
 
 DupLESS implementa un esquema que consta de cinco algoritmos (Kg, EvC, EvS, Vf, Ev), los últimos dos deterministas: 
 
+
 \begin{itemize}
 \item \textit{Generación de claves Kg: } \\
+(pk, sk) \$ ← Kg. Este algoritmo genera una llave pública \textit{pk= (e,n)} que puede distribuirse libremente entre varios usuarios, y una clave privada \textit{sk = (d,n)} que permanece sólo en el servidor de llaves. Dichas claves serán parte del servidor, son generadas a través del algoritmo de clave pública RSA.
 
-$(pk, sk) \stackrel{ \$ }{\longleftarrow} Kg$. 
-
-Este algoritmo genera una llave pública \textit{pk= (e,n)} que puede distribuirse libremente entre varios usuarios, y una clave privada \textit{sk = (d,n)} que permanece sólo en el servidor de llaves. Estas llaves son generadas utilizando el algoritmo de RSA.
 
 \item \textit{EvC: }\\ 
 La evaluación de este protocolo comienza del lado del cliente: 
 \begin {enumerate}
 \item Se obtiene del servidor la clave pública \textit{e} y se realiza una comparación con \textit{e $\leq$ N}, $N$ fue el producto de 2 números primos utilizado en la generación de llaves del servidor. Si la comparación no se cumple, el protocolo envía un error.
-\item Se elige un número aleatorio entero $r \stackrel{ \$ }{\longleftarrow} Z_{N}$.
+\item Se elige un número aleatorio entero $r<N$.
 \item Se realiza una función hash al archivo que se desea almacenar en Nube, es decir \textit{h ← H(M)} 
 \item Ahora se multiplica la función hash del mensaje $M$ por el número aleatorio elevado a la llave pública del servidor (\textit{r$^e$}) y se almacena en \textbf{x}, es decir \textit{x ← h $\cdot$ r$^e$ $\bmod$ N}
-\item Esta \textbf{x} es enviada al servidor de llaves, en donde será firmada por éste sin saber su contenido ni procedencia, es decir realizará una firma a ciegas del mensaje.
-\item La firma realizada por el servidor es recibida en el cliente y se realiza la siguiente operación \hspace{2cm} \textit{z ← y $\cdot$ r$^{-1}$ $\bmod$ N} donde $z$ es la llave con la cual se cifrará el mensaje.
+\item Esta \textbf{x} es enviada al servidor de llaves, en donde será firmada por éste sin saber su contenido ni procedencia, es decir realizar una firma a ciegas del mensaje a cargar.
+\item La firma realizada por el servidor es recibida en el cliente y se realiza la siguiente operación \hspace{2cm} \textit{z ← y $\cdot$ r$^{-1}$ $\bmod$ N}
 
 
 \end{enumerate}
 \item \textit{EvS: }\\ 
-Del lado del servidor, se recibe la entrada \textit{x} que corresponde al factor de ocultamiento del archivo enviada por el lado del cliente. El servidor sólo realiza una operación la cuál es la firma con la llave privada del servidor. Dicha firma es a ciegas ya que el servidor no conoce el contenido del archivo ni la procedencia de quien lo está enviando. Dicha firma se realiza de la siguiente manera: \hspace{2cm} \textit{y ← x$^d$ $\bmod$ N}
+Del lado del servidor, se recibe la entrada \textit{x} que corresponde a la función hash del archivo enviada por el lado del cliente. El servidor sólo realiza una operación la cuál es la firma con la llave privada del servidor. Dicha firma es a ciegas ya que el servidor no conoce el contenido del archivo ni la procedencia de quien lo esta enviando. Dicha firma se realiza de la siguiente manera: \hspace{2cm} \textit{y ← x$^d$ $\bmod$ N}
 
 
 \item \textit{Vf: }\\
 
-Este algoritmo de verificación se encarga de corroborar la firma realizada por el servidor, es decir, verifica que efectivamente sea el servidor de llaves $KS$ la entidad que realizó la firma a ciegas que el cliente estaba solicitando. Además, este algoritmo asegura que el archivo firmado por el servidor $KS$ sea el que el cliente envió. 
+Este algoritmo de verificación se encarga de corroborar la firma realizada por el servidor, es decir, verifica que efectivamente sea el servidor de llaves $KS$ la entidad que realizo la firma a ciegas que el cliente estaba solicitando. Además de que también este algoritmo asegura que el archivo firmado por el servidor $KS$ sea el que el cliente envió para su solicitud de almacenamiento. 
 Dicho algoritmo opera de la siguiente manera: 
 \begin{itemize}
-\item Realiza la operación $z^e \bmod N $. Dicha operación se realiza para eliminar el factor de ocultamiento realizado por el cliente. De esta manera se puede llegar hasta la comprobación de la misma función hash generada en el cliente, si ésta es igual a la que estaba bajo el factor de ocultamiento, el algoritmo comprueba que el $KS$ firmó correctamente. 
-\item Si el algoritmo realizó la operación \textit{z $^e$ $\bmod$ N} y el resultado en la comparación de las funciones hash no es el mismo, entonces el servidor no llevó a cabo correctamente el proceso de firmado y arroja un error. 
+\item Realiza la operación $z^e \bmod N $. Dicha operación se realiza para eliminar el factor de ocultamiento realizado por el cliente. De esta manera se puede llegar hasta la comprobación de la misma función hash generada en el cliente, si ésta es igual a la que estaba bajo el factor de ocultamiento, el algoritmo comprueba que el $KS$ firmó correctamente y envía un 1. 
+\item Si el algoritmo realizó la operación \textit{z $^e$ $\bmod$ N} y el resultado en la comparación de las funciones hash no es el mismo, entonces el servidor no llevó a cabo correctamente el proceso de firmado y arroja un error 0. 
 
 \end{itemize}
 
 \item \textit{Ev: }\\
-Como último algoritmo se encuentra $Ev$, dicho algoritmo se encarga del proceso de cifrado $C1$ del archivo original $M$ junto con la clave generada $z$ a través del proceso entre el cliente y el servidor $KS$. También realiza el cifrado $C2$ de la clave $z$ junto con la clave pública del usuario que desea almacenar un archivo. Dichas operaciones son las siguientes: 
+Como último algoritmo se encuentra Ev, dicho algoritmo se encarga del proceso de cifrado $C1$ del archivo original $M$ junto con la clave generada $z$ a través del proceso entre el cliente y el servidor $KS$. También realiza el cifrado $C2$ de la clave $z$ junto con la clave privada del usuario que desea almacenar un archivo. Dichas operaciones son las siguientes: 
 
 \begin{itemize}
 \item C1 ← $E_{z}(M)$
@@ -129,11 +128,5 @@ Como último algoritmo se encuentra $Ev$, dicho algoritmo se encarga del proceso
 \end{itemize}
 
 
-
 \end{itemize}
-
-
-
-
-
 
